# blackbox

./: Cargo.toml  README.md  runner.sh
blackbox/: Cargo.toml
blackbox-common/: Cargo.toml
blackbox-common/src/: lib.rs
blackbox-ebpf/: Cargo.toml
blackbox-ebpf/src/: handlers.rs  main.rs  types.rs
blackbox/src/: main.rs  types.rs
blackbox/src/processing/: mod.rs
blackbox/src/tracing/: mod.rs
blackbox/src/ui/: mod.rs  theme.rs
tests/: profile_vs_strace.sh  test_strace_parity.sh
tests/features/: .gitignore  main.c  makefile
tests/flags/: data_exfiltration.py  installer.py
xtask/src/: build_ebpf.rs  run.rs
