[package]
name = "blackbox"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
blackbox-common = { path = "../blackbox-common", features = ["user"] }
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "sync",
] }
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
bytes = "1.5.0"

[[bin]]
name = "blackbox"
path = "src/main.rs"
