[package]
name = "blackbox"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
blackbox-common = { path = "../blackbox-common", features = ["user"] }
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "sync",
    "time",
] }
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
bytes = "1.5.0"
nix = { version = "0.27.1", features = ["process", "fs", "socket"] }
futures = "0.3.29"
iced = { version = "0.10.0", features = ["tokio", "image"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[[bin]]
name = "blackbox"
path = "src/main.rs"
